Refactor: task 1