@@ -10,7 +10,7 @@ class Task1Test {
 
     List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
     List<Integer> numbers10 = Arrays.asList(10, 20, 30, 40, 50, 60, 70, 80, 90, 100);
-    List<Integer> numbersEmpty = Arrays.asList();
+    List<Integer> numbersEmpty = List.of();
 
     @org.junit.jupiter.api.Test
     void averageAllEvenTest() {
